ProjetCompil/Gencode/Test/fail/asm/simble-fail.ass
; ----------------------------------------------------------------------
; -----------                      Programme généré par JCasc-----------
; ----------------------------------------------------------------------
   ADD #0, GB 
   ADDSP #0 
   HALT 
